fix max-height issue on Firefox

--- a/app/src/components/Row.scss
+++ b/app/src/components/Row.scss
@@ -2,18 +2,20 @@
 .row {
   margin-left: 20px;
   color: #fff;
+  margin-top: 1em;
   .row__title {
     text-transform: capitalize;
   }
   .row__posters {
-    display: flex;
     overflow-y: hidden;
     overflow-x: scroll;
     padding: 20px;
+    display: flex;
     .row__poster {
       object-fit: contain;
       width: 100%;
       max-height: 100px;
+      height: 100px;
       margin-right: 10px;
       transition: transform 450ms linear;
       cursor: pointer;
@@ -23,6 +25,7 @@
     }
     .row__poster--large {
       max-height: 250px;
+      height: 250px;
       transition: transform 450ms linear;
       cursor: pointer;
       &:hover {
